# multitask_dit_policy

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
src/multitask_dit_policy/: inference.py  inference_example.py  train.py  train_modal.py
src/multitask_dit_policy/model/: model.py  objectives.py  observation_encoder.py  transformer.py
src/multitask_dit_policy/utils/: configuration.py
